Full response of the /ping endpoint described for swagger
