# src/Healthcheck/PingController.php
@@ -34,7 +34,17 @@ final class PingController extends AbstractController
      * @OA\Summary("Healthcheck end basic information")
      * @OA\Response(
      *   code="200",
-     *   content=@OA\Content\Json()
+     *   content=@OA\Content\Json(properties={
+     *     @OA\Schema\StringLiteral(name="name"     , description="Name of the whole api being called", example="openskos-api"),
+     *     @OA\Schema\StringLiteral(name="status"   , description="Status of the api"                 , example="ok"          ),
+     *     @OA\Schema\StringLiteral(name="version"  , description="Version of the api"                , example="2.3"         ),
+     *     @OA\Schema\StringLiteral(name="license"  , description="License the api operates under"    , example="MIT"         ),
+     *     @OA\Schema\ObjectLiteral(name="copyright", description="Copyright information"             , properties={
+     *       @OA\Schema\StringLiteral(name="holder"    , description="Holder of the copyright"             , example="Picturae"),
+     *       @OA\Schema\IntegerLiteral(name="published", description="The year the copyright was published", example=2019),
+     *       @OA\Schema\IntegerLiteral(name="revised"  , description="The year the copyright was revised"  , example=2019),
+     *     }),
+     *   }),
      * )
      */
     public function ping(
